--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<h1>Ryno630</h1>
+		<h1>Ryno630's Github Page</h1>
 		<p>Testing Text ect....</p>
+		<a href="Testing link locations">https://ryno630.github.io/</a>
 	</body>
 </html>
