--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 	<body>
 		<h1>Ryno630's Github Page</h1>
 		<p>Testing Text ect....</p>
-		<a href="Testing link locations">https://ryno630.github.io/</a>
+		<a href="/Test">Testing link locations</a>
 	</body>
 </html>
